emf-agent/src/snapshots/emf_agent__high_availability__tests__lustre_resource_mounts_output.snap
---
source: emf-agent/src/high_availability.rs
expression: x
---
Some(
    "/lustre/fs0a9c/ost0003",
)
