emf-agent/src/snapshots/emf_agent__high_availability__tests__read_vagrant_stopped.snap
---
source: emf-agent/src/high_availability.rs
expression: cluster
---
Cluster {
    nodes: [
        Node {
            name: "oss1.local",
            id: "1",
            online: true,
            standby: false,
            standby_onfail: false,
            maintenance: false,
            pending: false,
            unclean: false,
            shutdown: false,
            expected_up: true,
            is_dc: false,
            resources_running: 5,
            type: Member,
        },
        Node {
            name: "oss2.local",
            id: "2",
            online: true,
            standby: false,
            standby_onfail: false,
            maintenance: false,
            pending: false,
            unclean: false,
            shutdown: false,
            expected_up: true,
            is_dc: true,
            resources_running: 4,
            type: Member,
        },
    ],
    resources: [
        Resource {
            id: "vboxfence",
            resource_agent: "stonith:fence_vbox",
            role: "Stopped",
            active: false,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 0,
            active_node_name: None,
            active_node_id: None,
        },
        Resource {
            id: "ost0",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss1.local",
            ),
            active_node_id: Some(
                "1",
            ),
        },
        Resource {
            id: "ost1",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss2.local",
            ),
            active_node_id: Some(
                "2",
            ),
        },
        Resource {
            id: "ost2",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss2.local",
            ),
            active_node_id: Some(
                "2",
            ),
        },
        Resource {
            id: "ost3",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss1.local",
            ),
            active_node_id: Some(
                "1",
            ),
        },
        Resource {
            id: "ost4",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss2.local",
            ),
            active_node_id: Some(
                "2",
            ),
        },
        Resource {
            id: "ost5",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss1.local",
            ),
            active_node_id: Some(
                "1",
            ),
        },
        Resource {
            id: "ost6",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss2.local",
            ),
            active_node_id: Some(
                "2",
            ),
        },
        Resource {
            id: "ost7",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss1.local",
            ),
            active_node_id: Some(
                "1",
            ),
        },
        Resource {
            id: "ost8",
            resource_agent: "ocf::lustre:Lustre",
            role: "Stopped",
            active: false,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 0,
            active_node_name: None,
            active_node_id: None,
        },
        Resource {
            id: "ost9",
            resource_agent: "ocf::lustre:Lustre",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "oss1.local",
            ),
            active_node_id: Some(
                "1",
            ),
        },
    ],
    bans: [],
    resource_mounts: {},
}
